--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/hello-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/hello-view.fxml
@@ -7,10 +7,6 @@
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="fr.butinfoalt1.riseandfall.front.RiseAndFallController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="description" onAction="#switchToDescriptionPage"/>
+    <Button text="Order" onAction="#switchToTest" fx:id="switchToOrderButton"/>
 </VBox>
