--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/order-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/order-view.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="fr.butinfoalt1.riseandfall.front.OrdreController">
+      fx:controller="fr.butinfoalt1.riseandfall.front.OrderController">
     <Button text="Retour" onAction="#switchToHello"/>
+
 </VBox>
