--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/description/description-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/description/description-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
-<StackPane fx:id="rootPane" xmlns:fx="http://javafx.com/fxml/1"
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="rootPane"
            fx:controller="fr.butinfoalt1.riseandfall.front.description.DescriptionController">
 
 
