--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/hello-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/hello-view.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.RiseAndFallController">
     <Button text="description" onAction="#switchToDescriptionPage"/>
     <Button text="Order" onAction="#switchToTest" fx:id="switchToOrderButton"/>
