--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -4,6 +4,6 @@
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.RiseAndFallController">
-    <Button text="description" onAction="#switchToDescriptionPage"/>
-    <Button text="Order" onAction="#switchToTest" fx:id="switchToOrderButton"/>
+    <Button text="Description" onAction="#switchToDescriptionPage"/>
+    <Button text="Order" onAction="#switchToOrders" fx:id="switchToOrderButton"/>
 </VBox>
