--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
-      fx:controller="fr.butinfoalt1.riseandfall.front.RiseAndFallController">
+      fx:controller="fr.butinfoalt1.riseandfall.front.MainController">
     <Button text="Description" onAction="#switchToDescriptionPage"/>
     <Button text="Order" onAction="#switchToOrders" fx:id="switchToOrderButton"/>
 </VBox>
