Quelques changements sur l'interface - Renommage du bouton "Order" en "Modifier les ordres" - Déplacement du bouton "Passer le tour" sur l'écran principal et renommage en "Tour suivant" - Renommage du bouton "Retour" de l'écran des ordres en "Annuler" - Placement des boutons "Sauvegarder" et "Annuler" de l'écran de gestion des ordres sur une même ligne

--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
@@ -35,13 +35,11 @@
         <Button text="+" onAction="#increaseHut"/>
     </HBox>
 
-    <!-- Bouton Sauvegarder -->
-    <Button text="Sauvegarder" onAction="#handleSave"/>
+    <HBox alignment="CENTER" spacing="10">
+        <!-- Bouton Sauvegarder -->
+        <Button text="Sauvegarder" onAction="#handleSave"/>
 
-    <!-- Bouton Passer le tour -->
-    <Button text="Passer le tour" onAction="#handleEndTurn"/>
-
-    <!-- Bouton Retour -->
-    <Button text="Retour" onAction="#switchBack"/>
-
+        <!-- Bouton Retour -->
+        <Button text="Annuler" onAction="#switchBack"/>
+    </HBox>
 </VBox>
