--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -5,5 +5,8 @@
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.MainController">
     <Button text="Description" onAction="#switchToDescriptionPage"/>
-    <Button text="Order" onAction="#switchToOrders"/>
+    <Button text="Modifier les ordres" onAction="#switchToOrders"/>
+
+    <!-- Bouton Passer le tour -->
+    <Button text="Tour suivant" onAction="#handleEndTurn"/>
 </VBox>
