Mise à jour des commentaires

--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -7,6 +7,6 @@
     <Button text="Description" onAction="#switchToDescriptionPage"/>
     <Button text="Modifier les ordres" onAction="#switchToOrders"/>
 
-    <!-- Bouton Passer le tour -->
+    <!-- Bouton pour passer au tour suivant -->
     <Button text="Tour suivant" onAction="#handleEndTurn"/>
 </VBox>
