--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
@@ -16,21 +16,10 @@
         <Label fx:id="goldField" text="0"/>
     </HBox>
 
-    <!-- Champ Troupe avec boutons + et - -->
-    <HBox alignment="CENTER" spacing="10">
-        <Label text="Troupe :"/>
-        <Button text="-" onAction="#decreaseTroop"/>
-        <Label fx:id="troopField"/>
-        <Button text="+" onAction="#increaseTroop"/>
-    </HBox>
-
-    <!-- Champ Hut avec boutons + et - -->
-    <HBox alignment="CENTER" spacing="10">
-        <Label text="Hut :"/>
-        <Button text="-" onAction="#decreaseHut"/>
-        <Label fx:id="hutField"/>
-        <Button text="+" onAction="#increaseHut"/>
-    </HBox>
+    <VBox fx:id="unitVBox" alignment="CENTER" spacing="10">
+    </VBox>
+    <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10">
+    </VBox>
 
     <HBox alignment="CENTER" spacing="10">
         <!-- Bouton Sauvegarder -->
