--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import fr.butinfoalt1.riseandfall.front.components.TitleLabel?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.OrderController">
 
@@ -10,15 +11,27 @@
         <Insets top="20"/>
     </VBox.margin>
 
-    <!-- Quantité d'or -->
-    <HBox alignment="CENTER" spacing="10">
-        <Label text="🪙 Or :"/>
-        <Label fx:id="goldField" text="0"/>
-    </HBox>
-
-    <VBox fx:id="unitVBox" alignment="CENTER" spacing="10">
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Vos ressources :</TitleLabel>
+        <!-- Quantité d'or -->
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="🪙 Or :"/>
+            <Label fx:id="goldField" text="0"/>
+        </HBox>
+        <Label fx:id="totalUnitsField" text="Unités totales : 0"/>
+        <Label fx:id="totalBuildingsField" text="Bâtiments totaux : 0"/>
     </VBox>
-    <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10">
+
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Entrainement d'unités :</TitleLabel>
+        <!--Ce composant est rempli dynamiquement avec les types d'unités-->
+        <VBox fx:id="unitVBox" alignment="CENTER"/>
+    </VBox>
+
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Construction de bâtiments :</TitleLabel>
+        <!--Ce composant est rempli dynamiquement avec les types de bâtiments-->
+        <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10"/>
     </VBox>
 
     <HBox alignment="CENTER" spacing="10">
@@ -28,6 +41,4 @@
         <!-- Bouton Annuler -->
         <Button text="Annuler" onAction="#switchBack"/>
     </HBox>
-    <Label fx:id="totalUnitsField" text="Unités totales : 0"/>
-    <Label fx:id="totalBuildingsField" text="Bâtiments totaux : 0"/>
 </VBox>
