--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import fr.butinfoalt1.riseandfall.front.components.TitleLabel?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.MainController">
-    <Button text="Description" onAction="#switchToDescriptionPage"/>
-    <Button text="Modifier les ordres" onAction="#switchToOrders"/>
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Vos ressources :</TitleLabel>
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="🪙 Or :"/>
+            <Label fx:id="goldField" text="0"/>
+        </HBox>
 
-    <!-- Bouton pour passer au tour suivant -->
-    <Button text="Tour suivant" onAction="#handleEndTurn"/>
+        <VBox alignment="CENTER" spacing="10">
+            <TitleLabel>Vos unités :</TitleLabel>
+            <!--Ce composant est rempli dynamiquement avec les types d'unités-->
+            <VBox fx:id="unitVBox" alignment="CENTER"/>
+        </VBox>
+
+        <VBox alignment="CENTER" spacing="10">
+            <TitleLabel>Vos bâtiments :</TitleLabel>
+            <!--Ce composant est rempli dynamiquement avec les types de bâtiments-->
+            <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10"/>
+        </VBox>
+    </VBox>
+    <HBox alignment="CENTER" spacing="10">
+        <Button text="Description" onAction="#switchToDescriptionPage"/>
+        <Button text="Modifier les ordres" onAction="#switchToOrders"/>
+
+        <!-- Bouton pour passer au tour suivant -->
+        <Button text="Tour suivant" onAction="#handleEndTurn"/>
+    </HBox>
 </VBox>
