Reformatage du code

--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/main-view.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import fr.butinfoalt1.riseandfall.front.components.TitleLabel?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.MainController">
     <VBox alignment="CENTER" spacing="10">
