--- a/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
+++ b/src/main/resources/fr/butinfoalt1/riseandfall/front/orders-view.fxml
@@ -2,7 +2,8 @@
 
 <?import fr.butinfoalt1.riseandfall.front.components.TitleLabel?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt1.riseandfall.front.OrderController">
