--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
@@ -2,8 +2,7 @@
 
 <?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.OrderController">
