--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ChoiceBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" alignment="CENTER"
       spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.WelcomeView"
@@ -11,6 +13,8 @@
     <TitleLabel style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: black;">
         Bienvenue sur Rise &amp; Fall futur empereur.
     </TitleLabel>
+    <Label fx:id="instructions">Sélectionnez votre race pour jouer</Label>
+    <ChoiceBox fx:id="raceChoiceBox"/>
     <VBox.margin>
         <Insets bottom="40"/>
     </VBox.margin>
