Correction de la barre de scroll de l'écran de description qui n'était pas sur le bord lorsque la largeur de la fenêtre dépassait 1000px

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/description-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/description-view.fxml
@@ -12,11 +12,11 @@
         <!-- Image en arrière-plan -->
         <ImageView fx:id="backgroundImageView" opacity="0.2" managed="false"/>
         <!-- Texte en avant-plan -->
-        <ScrollPane fitToWidth="true" styleClass="text-scroll-pane" fx:id="textScrollPane" maxWidth="1000">
+        <ScrollPane fitToWidth="true" styleClass="text-scroll-pane" fx:id="textScrollPane">
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
-            <VBox alignment="CENTER">
+            <VBox alignment="CENTER" maxWidth="1000">
                 <TextFlow fx:id="textFlow" style="-fx-font-size: 20px;"/>
             </VBox>
         </ScrollPane>
