Retirer la transparence de l'image de fond de l'écran principal

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/main-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/main-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.MainController">
-    <ImageView fx:id="backgroundImageView" opacity="0.2" managed="false"/>
+    <ImageView fx:id="backgroundImageView" managed="false"/>
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Vos ressources :</TitleLabel>
 
