Affichage d'une image en arriere plan sur l'écran principale (Partie 2), ajout d'une fonction UIUtils pour setBackgroundImage

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
@@ -4,8 +4,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.OrderController">
+    <ImageView fx:id="backgroundImageView" managed="false"/>
 
     <VBox.margin>
         <Insets top="20"/>
