--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
@@ -13,11 +13,15 @@
         <Insets top="20"/>
     </VBox.margin>
 
-    <VBox alignment="CENTER" spacing="10">
-        <TitleLabel>Vos ressources :</TitleLabel>
-        <Label fx:id="goldField"/>
-        <Label fx:id="unitsField" text="0"/>
-    </VBox>
+<VBox alignment="CENTER" spacing="10">
+    <TitleLabel>Vos ressources :</TitleLabel>
+    <HBox alignment="CENTER" spacing="20">
+        <Label fx:id="goldField" text="Or restant : 0"/>
+        <Label fx:id="unitsField" text="Entrainements d'unités restants : 0"/>
+        <Label fx:id="totalPrice" text="Prix total : 0"/>
+    </HBox>
+</VBox>
+
 
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Entrainement d'unités :</TitleLabel>
@@ -32,16 +36,14 @@
         <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10"/>
     </VBox>
 
-    <VBox alignment="CENTER" spacing="10">
-        <TitleLabel>Résumé :</TitleLabel>
-        <Label fx:id="totalPrice"/>
-    </VBox>
 
-    <HBox alignment="CENTER" spacing="10">
-        <!-- Bouton Sauvegarder -->
-        <Button text="Sauvegarder" onAction="#handleSave"/>
 
-        <!-- Bouton Annuler -->
-        <Button text="Annuler" onAction="#switchBack"/>
-    </HBox>
+<HBox alignment="CENTER" spacing="20">
+    <Button text="Sauvegarder" onAction="#handleSave"
+            style="-fx-font-size: 16px; -fx-padding: 10 20;"/>
+
+    <Button text="Annuler" onAction="#switchBack"
+            style="-fx-font-size: 16px; -fx-padding: 10 20;"/>
+</HBox>
+
 </VBox>
