--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
+<?import fr.butinfoalt.riseandfall.front.orders.table.BuildingsTable?>
+<?import fr.butinfoalt.riseandfall.front.orders.table.PurchasableTable?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
-      fx:controller="fr.butinfoalt.riseandfall.front.OrderController">
+      fx:controller="fr.butinfoalt.riseandfall.front.orders.OrderController">
     <ImageView fx:id="backgroundImageView" managed="false"/>
 
     <VBox.margin>
         <Insets top="20"/>
     </VBox.margin>
 
-<VBox alignment="CENTER" spacing="10">
-    <TitleLabel>Vos ressources :</TitleLabel>
-    <HBox alignment="CENTER" spacing="20">
-        <Label fx:id="goldField" text="Or restant : 0"/>
-        <Label fx:id="unitsField" text="Entrainements d'unités restants : 0"/>
-        <Label fx:id="totalPrice" text="Prix total : 0"/>
-    </HBox>
-</VBox>
-
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Vos ressources :</TitleLabel>
+        <Label fx:id="goldField"/>
+        <Label fx:id="unitsField" text="0"/>
+    </VBox>
 
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Entrainement d'unités :</TitleLabel>
 
-        <!--Ce composant est rempli dynamiquement avec les types d'unités-->
-        <VBox fx:id="unitVBox" alignment="CENTER" spacing="10"/>
+        <!--Ce tableau est rempli dynamiquement avec les types d'unités-->
+        <PurchasableTable fx:id="unitTable"/>
     </VBox>
 
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Construction de bâtiments :</TitleLabel>
-        <!--Ce composant est rempli dynamiquement avec les types de bâtiments-->
-        <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10"/>
+
+        <!--Ce tableau est rempli dynamiquement avec les types de bâtiments-->
+        <BuildingsTable fx:id="buildingTable"/>
     </VBox>
 
+    <VBox alignment="CENTER" spacing="10">
+        <TitleLabel>Résumé :</TitleLabel>
+        <Label fx:id="totalPrice"/>
+    </VBox>
 
+    <HBox alignment="CENTER" spacing="10">
+        <!-- Bouton Sauvegarder -->
+        <Button text="Sauvegarder" onAction="#handleSave"/>
 
-<HBox alignment="CENTER" spacing="20">
-    <Button text="Sauvegarder" onAction="#handleSave"
-            style="-fx-font-size: 16px; -fx-padding: 10 20;"/>
-
-    <Button text="Annuler" onAction="#switchBack"
-            style="-fx-font-size: 16px; -fx-padding: 10 20;"/>
-</HBox>
-
+        <!-- Bouton Annuler -->
+        <Button text="Annuler" onAction="#switchBack"/>
+    </HBox>
 </VBox>
