Adapter le contenu à la partie claire du fond pour que ce soit visible. Ajout d'une scrollbar

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/description-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/description-view.fxml
@@ -12,7 +12,7 @@
         <!-- Image en arrière-plan -->
         <ImageView fx:id="backgroundImageView" opacity="0.2" managed="false"/>
         <!-- Texte en avant-plan -->
-        <ScrollPane fitToWidth="true" styleClass="text-scroll-pane" fx:id="textScrollPane">
+        <ScrollPane fitToWidth="true" styleClass="scrollpane-transparent" fx:id="textScrollPane">
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
