--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
@@ -10,3 +10,7 @@
 .purchasable-table-column {
     -fx-alignment: CENTER;
 }
+
+.scrollpane-transparent, .scrollpane-transparent > .viewport {
+    -fx-background-color: transparent;
+}
