--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
@@ -21,4 +21,5 @@
         <Insets bottom="40"/>
     </VBox.margin>
     <Button text="Jouer" onAction="#play"/>
+    <Button text="Login" onAction="#login"/>
 </VBox>
