--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/authentification/register-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/authentification/register-view.fxml
@@ -3,13 +3,29 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane prefWidth="400" prefHeight="400" style="-fx-background-color: #f4f4f4;">
-    <VBox alignment="CENTER" spacing="15" layoutX="50" layoutY="30" prefWidth="300" prefHeight="340">
-        <Label text="Créer un compte" style="-fx-font-size: 24px; -fx-text-fill: #333;"/>
-        <TextField promptText="Nom d'utilisateur"/>
-        <PasswordField promptText="Mot de passe"/>
-        <PasswordField promptText="Confirmer le mot de passe"/>
-        <Button text="S'inscrire" style="-fx-background-color: #28a745; -fx-text-fill: white;"/>
-        <Hyperlink text="Déjà inscrit ? Se connecter"/>
-    </VBox>
-</AnchorPane>
+<?import javafx.scene.image.ImageView?>
+<?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
+<?import javafx.geometry.Insets?>
+<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" alignment="CENTER"
+      spacing="20.0"
+      fx:controller="fr.butinfoalt.riseandfall.front.authentification.RegisterController"
+      prefHeight="400.0" prefWidth="600.0">
+    <ImageView fx:id="backgroundImageView" managed="false"/>
+    <TitleLabel style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: black;">
+        Bienvenue sur Rise &amp; Fall futur empereur.
+    </TitleLabel>
+    <Label text="Connexion" style="-fx-font-size: 24px; -fx-text-fill: #333;"/>
+
+    <TextField fx:id="username" promptText="Nom d'utilisateur" maxWidth="400.0"/>
+    <PasswordField fx:id="password" promptText="Mot de passe" maxWidth="400.0"/>
+    <PasswordField fx:id="confirmPassword" promptText="Confirmer le mot de passe" maxWidth="400.0"/>
+
+
+    <Label fx:id="errorMessage" text="" style="-fx-text-fill: red;" visible="false"/>
+    <VBox.margin>
+        <Insets bottom="40"/>
+    </VBox.margin>
+
+    <Button text="Créer un compte" style="-fx-background-color: #0078D7; -fx-text-fill: white;" onAction="#register"/>
+    <Hyperlink text="Déjà inscrit ? Se connecter" onAction="#login"/>
+</VBox>
