--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/welcome-view.fxml
@@ -13,10 +13,8 @@
       prefHeight="400.0" prefWidth="600.0">
     <ImageView fx:id="backgroundImageView" managed="false"/>
     <TitleLabel style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: black;">
-        Bienvenue sur Rise &amp; Fall futur empereur.
+        Bienvenue sur Rise &amp; Fall Futur Empereur.
     </TitleLabel>
-    <Label fx:id="instructions">Sélectionnez votre race pour jouer</Label>
-    <ChoiceBox fx:id="raceChoiceBox"/>
     <VBox.margin>
         <Insets bottom="40"/>
     </VBox.margin>
