Correction script SQL avec conseils du prof de BDD + implémentation de la vérification de l'intelligence

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/orders-view.fxml
@@ -18,7 +18,8 @@
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Vos ressources :</TitleLabel>
         <Label fx:id="goldField"/>
-        <Label fx:id="unitsField" text="0"/>
+        <Label fx:id="intelligenceField"/>
+        <Label fx:id="unitsField"/>
     </VBox>
 
     <VBox alignment="CENTER" spacing="10">
