--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/gamelist-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/gamelist-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" alignment="CENTER"
       spacing="20.0" prefHeight="400.0" prefWidth="600.0"
-      fx:controller="fr.butinfoalt.riseandfall.front.GameList.GameListController">
+      fx:controller="fr.butinfoalt.riseandfall.front.gamelist.GameListController">
 
     <ImageView fx:id="backgroundImageView" managed="false"/>
     <Label fx:id="instructions">Sélectionnez votre race pour jouer</Label>
