Ajout de l'écran de partie en attente et réorganisation de certains fichiers

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/components/game-component.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/components/game-component.fxml
@@ -4,7 +4,7 @@
 
 <?import javafx.scene.layout.Pane?>
 <HBox xmlns:fx="http://javafx.com/fxml"
-      fx:controller="fr.butinfoalt.riseandfall.front.gamelist.GameComponentController"
+      fx:controller="fr.butinfoalt.riseandfall.front.game.gamelist.GameComponentController"
       spacing="20"
       alignment="CENTER_LEFT"
       maxWidth="400"
