--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
@@ -1,15 +1,13 @@
-<?import javafx.scene.control.ScrollPane?>
+<?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
-
-<?import javafx.scene.control.ChoiceBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" alignment="CENTER"
       spacing="20.0" prefHeight="400.0" prefWidth="600.0"
-      fx:controller="fr.butinfoalt.riseandfall.front.gamelist.GameListController">
+      fx:controller="fr.butinfoalt.riseandfall.front.game.gamelist.GameListController">
 
     <ImageView fx:id="backgroundImageView" managed="false"/>
 
