--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/main-running-game-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/main-running-game-view.fxml
@@ -26,11 +26,11 @@
             <VBox fx:id="buildingsVBox" alignment="CENTER" spacing="10"/>
         </VBox>
     </VBox>
-    <HBox alignment="CENTER" spacing="10">
+    <HBox fx:id="buttonsContainer" alignment="CENTER" spacing="10">
         <Button text="Description" onAction="#switchToDescriptionPage"/>
         <Button text="Modifier les ordres" onAction="#switchToOrders"/>
 
         <!-- Bouton pour passer au tour suivant -->
-        <Button text="Tour suivant" onAction="#handleEndTurn"/>
+        <Button fx:id="nextTurnButton" text="Tour suivant" onAction="#handleEndTurn"/>
     </HBox>
 </VBox>
