Ajout de l'interface ViewController ajoutant des méthodes appelées automatiquement lorsque la vue est affichée ou cachée

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
@@ -28,4 +28,6 @@
             <Insets top="20" right="20" bottom="20" left="20"/>
         </padding>
     </VBox>
+
+    <Label fx:id="errorMessage" style="-fx-text-fill: red;" visible="false"/>
 </VBox>
