--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/main-running-game-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/main-running-game-view.fxml
@@ -39,6 +39,7 @@
     <HBox fx:id="buttonsContainer" alignment="CENTER" spacing="10">
         <Button text="Description" onAction="#switchToDescriptionPage"/>
         <Button text="Modifier les ordres" onAction="#switchToOrders"/>
+        <Button text="Créer une attaque" onAction="#createAttack"/>
 
         <!-- Bouton pour passer au tour suivant -->
         <Button fx:id="nextTurnButton" text="Tour suivant" onAction="#handleEndTurn"/>
