--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
@@ -1,9 +1,11 @@
 <?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
+<?import fr.butinfoalt.riseandfall.front.game.orders.table.UnitsSelectTable?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.game.orders.OrderAttackController">
     <ImageView fx:id="backgroundImageView" managed="false"/>
@@ -14,9 +16,21 @@
     <VBox alignment="CENTER" spacing="10">
         <TitleLabel>Qui attaquez-vous ?:</TitleLabel>
 
-        <ChoiceBox fx:id="targetPlayer"/>
+        <ChoiceBox fx:id="targetPlayerSelector"/>
     </VBox>
     <VBox alignment="CENTER" spacing="10">
-        <TitleLabel>Nombre d'unité:</TitleLabel>
-        <Label fx:id="totalUnit"/>
+        <TitleLabel>Avec quelles unités ?</TitleLabel>
 
+        <UnitsSelectTable fx:id="unitsTable"/>
+    </VBox>
+
+    <HBox alignment="CENTER" spacing="10">
+        <!-- Bouton Sauvegarder -->
+        <Button text="Sauvegarder" onAction="#handleSave"/>
+
+        <!-- Bouton Annuler -->
+        <Button text="Annuler" onAction="#switchBack"/>
+    </HBox>
+
+    <Label fx:id="errorMessage" style="-fx-text-fill: red;" visible="false"/>
+</VBox>
